Started work on goal manager!

--- a/manager.html
+++ b/manager.html
@@ -2,10 +2,11 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>TrelloPrice</title>
+    <link rel="stylesheet" href="//p.trellocdn.com/power-up.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <script src="//p.trellocdn.com/power-up.min.js" crossorigin="anonymous"></script>
-    <script src="js/main.js"></script>
+    <script src="js/manager.js"></script>
 </body>
 </html>
