--- a/settings.html
+++ b/settings.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://p.trellocdn.com/power-up.min.css">
+    <link rel="stylesheet" href="//p.trellocdn.com/power-up.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -21,7 +21,6 @@
     </form>
 
     <script src="//p.trellocdn.com/power-up.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/settings.js"></script>
 </body>
 </html>
