--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
     <title>TrelloPrice</title>
+    <meta charset="UTF-8">
+    <script src="//p.trellocdn.com/power-up.min.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <script src="//p.trellocdn.com/power-up.min.js" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
