--- a/settings.html
+++ b/settings.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <title>TrelloFinances</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="//p.trellocdn.com/power-up.min.css">
     <link rel="stylesheet" href="css/style.css">
+
+    <script src="//p.trellocdn.com/power-up.min.js"></script>
+    <script src="js/settings.js"></script>
 </head>
 <body>
     <form id="priceSettings">
-        <label data-i18n-id="price" for="priceSettings">Price</label>
-        <input type="text" id="price" placeholder="0">
-        <label data-i18n-id="currency" for="priceSettings">Currency</label>
+        <label data-i18n-id="price" for="price">Price</label>
+        <input type="text" id="price" name="currency" placeholder="0">
+        <label data-i18n-id="currency" for="currency">Currency</label>
         <select class="price-select-currency" id="currency">
             <option data-i18n-id="currency_select">Select currency</option>
         </select>
 
-        <div class="price-confirm-btns">
-            <button data-i18n-id="save" type="submit" class="mod-primary" id="save">Save</button>
-            <button data-i18n-id="remove" type="submit" class="mod-danger price-remove" id="remove">Remove</button>
-        </div>
+        <button data-i18n-id="save" type="submit" class="mod-primary" id="save">Save</button>
+        <button data-i18n-id="remove" type="submit" class="mod-danger price-remove" id="remove">Remove</button>
     </form>
-
-    <script src="//p.trellocdn.com/power-up.min.js"></script>
-    <script src="js/settings.js"></script>
 </body>
 </html>
