Fix default locale

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <title>TrelloPrice</title>
     <meta charset="UTF-8">
-    <script src="//p.trellocdn.com/power-up.min.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <script src="js/main.js"></script>
+    <script src="//p.trellocdn.com/power-up.min.js" crossorigin="anonymous"></script>
+    <script src="/js/main.js"></script>
 </body>
 </html>
