Fix default locale

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <script src="//p.trellocdn.com/power-up.min.js" crossorigin="anonymous"></script>
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
